src/test/resources/regressions/features/import/parse_error/parse_error.gobra
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

package parseError

// package foo has a source file but an invalid preamble, i.e., fails to parse
//:: ExpectedOutput(parser_error)
imp bla "bla"
